# open-midgard

./: .gitignore  ANTI_ALIASING.md  CMakeLists.txt  CMakePresets.json  DllMgr.i  PACKET_VERSION_ALIGNMENT.md  TODO.md  build_output.txt  build_output_2.txt  extract.ps1  extract_structs.py  extracted_asset_strings.txt  showIncludes.txt
.cursor/rules/: build-mode-rules.mdc  implementation-rules.mdc  media-file-handling-rules.mdc  packet-alignment-rules.mdc  reference-lookup-rules.mdc
.github/instructions/: ai_rules.instructions.md  implementation_rules.instructions.md  packet_alignment.instructions.md  reference_lookup.instructions.md
.github/workflows/: build-release-clients.yml
build-mingw-preset/.qt/: QtDeployTargets.cmake
build-mingw-preset/src/qtui/ro_qtui_autogen/EWIEGA46WW/: qrc_QtUiSpikeAssets.cpp
cmake/: BestEffortCopy.cmake  QtSetup.cmake
src/: DebugLog.h  Types.h
src/audio/: Audio.cpp  Audio.h  AudioBackend.h  CMakeLists.txt  MilesAudioBackend.cpp  MiniaudioBackend.cpp  Video.cpp  Video.h
src/cipher/: CDec.cpp  CDec.h  CMakeLists.txt
src/core/: CMakeLists.txt  ClientInfoLocale.h  DllMgr.cpp  DllMgr.h  DllProtos.h  File.cpp  File.h  GPak.cpp  GPak.h  Globals.cpp  Globals.h  Hash.cpp  Hash.h  Locale.cpp  Timer.cpp  Timer.h  Xml.cpp  Xml.h
src/gamemode/: CMakeLists.txt  CursorRenderer.cpp  CursorRenderer.h  GameMode.cpp  GameMode.h  GameModePacket.cpp  GameModePacket.h  LoginMode.cpp  LoginMode.h  Mode.cpp  Mode.h  View.cpp  View.h
src/input/: CMakeLists.txt  Input.cpp  Input.h
src/item/: CMakeLists.txt  Item.cpp  Item.h
src/lua/: CMakeLists.txt  LuaBridge.cpp  LuaBridge.h  lua51_lundump_compat.c
src/main/: AppMain_stub.cpp  CMakeLists.txt  OpenMidgard.rc  WinMain.cpp  WinMain.h
src/network/: CMakeLists.txt  Connection.cpp  Connection.h  GronPacket.cpp  GronPacket.h  Packet.h  PacketQueue.cpp  PacketQueue.h
src/pathfinder/: CMakeLists.txt  PathFinder.cpp  PathFinder.h
src/platform/: WindowsCompat.h
src/qtui/: CMakeLists.txt  QtPlatformWindow.cpp  QtPlatformWindow.h  QtUiRuntimeNoop.cpp  QtUiSpikeBridge.cpp  QtUiState.h  QtUiStateAdapter.cpp  QtUiStatusIconCatalog.h
src/qtui/qml/: GameOverlay.qml
src/render/: CMakeLists.txt  DC.cpp  DC.h  DrawUtil.cpp  DrawUtil.h  Prim.cpp  Prim.h  Renderer.cpp  Renderer.h
src/render3d/: CMakeLists.txt  D3dutil.cpp  D3dutil.h  Device.cpp  Device.h  Device_nonwin.cpp  Dx7Compat.h  GraphicsSettings.cpp  GraphicsSettings.h  ModernRenderState.cpp  ModernRenderState.h  RenderBackend.cpp  RenderBackend.h  RenderDevice.cpp  VulkanShaders.generated.h  VulkanSmaaShaders.generated.h
src/render3d/shaders/: vulkan_post_fxaa.hlsl  vulkan_post_smaa.hlsl
src/res/: ActRes.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  EzEffectRes.cpp  EzEffectRes.h  GndRes.cpp  GndRes.h  Ijl.cpp  Ijl.h  ImfRes.cpp  ImfRes.h  ModelRes.cpp  ModelRes.h  PaletteRes.cpp  PaletteRes.h  Res.cpp  Res.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  WorldRes.cpp  WorldRes.h
src/security/: CMakeLists.txt  Security.cpp  Security.h
src/session/: CMakeLists.txt  JobNameTable.generated.inc  Session.cpp  Session.h
src/skill/: CMakeLists.txt  Skill.cpp  Skill.h
src/ui/: CMakeLists.txt  NpcDialogColoredText.cpp  UIBasicInfoWnd.cpp  UIBasicInfoWnd.h  UIChooseWnd.cpp  UIChooseWnd.h  UIEquipWnd.cpp  UIEquipWnd.h  UIFrameWnd.cpp  UIFrameWnd.h  UIItemPurchaseWnd.cpp  UIItemPurchaseWnd.h  UIItemSellWnd.cpp  UIItemSellWnd.h  UIItemWnd.cpp  UIItemWnd.h  UIJoinPartyAcceptWnd.cpp  UIJoinPartyAcceptWnd.h  UILoadingWnd.cpp  UILoadingWnd.h  UILoginWnd.cpp  UILoginWnd.h  UIMakeCharWnd.cpp  UIMakeCharWnd.h  UIMessengerGroupWnd.cpp  UIMessengerGroupWnd.h  UIMinimapWnd.cpp  UIMinimapWnd.h  UINewChatWnd.cpp  UINewChatWnd.h  UINotifyLevelUpWnd.cpp  UINotifyLevelUpWnd.h  UINpcInputWnd.cpp  UINpcInputWnd.h  UINpcMenuWnd.cpp  UIOptionWnd.cpp  UIOptionWnd.h  UIPartyOptionWnd.cpp  UIPartyOptionWnd.h  UIPcGage.cpp  (+31 more)
src/world/: 3dActor.cpp  3dActor.h  CMakeLists.txt  GameActor.cpp  GameActor.h  Granny.cpp  Granny.h  MsgEffect.cpp  MsgEffect.h  RagEffect.cpp  RagEffect.h  RagEffectCatalog.generated.inc  World.cpp  World.h
tools/: generate_rageffect_catalog.py  update_vulkan_smaa_shaders.ps1
