add_library(ro_ui STATIC
    UIWindow.h
    UIWindow.cpp
    UiScale.h
    UiScale.cpp
    UILoginWnd.h
    UILoginWnd.cpp
    UISelectServerWnd.h
    UISelectServerWnd.cpp
    UISelectCharWnd.h
    UISelectCharWnd.cpp
    UIMakeCharWnd.h
    UIMakeCharWnd.cpp
    UINewChatWnd.h
    UINewChatWnd.cpp
    UIBasicInfoWnd.h
    UIBasicInfoWnd.cpp
    UIStatusWnd.h
    UIStatusWnd.cpp
    NpcDialogColoredText.h
    NpcDialogColoredText.cpp
    UISayDialogWnd.h
    UISayDialogWnd.cpp
    UINpcMenuWnd.h
    UINpcMenuWnd.cpp
    UINpcInputWnd.h
    UINpcInputWnd.cpp
    UIChooseSellBuyWnd.h
    UIChooseSellBuyWnd.cpp
    UINotifyLevelUpWnd.h
    UINotifyLevelUpWnd.cpp
    UIItemWnd.h
    UIItemWnd.cpp
    UIStorageWnd.h
    UIStorageWnd.cpp
    UIItemInfoWnd.h
    UIItemInfoWnd.cpp
    UIItemCollectionWnd.h
    UIItemCollectionWnd.cpp
    UIShortCutWnd.h
    UIShortCutWnd.cpp
    UIItemShopWnd.h
    UIItemShopWnd.cpp
    UIItemPurchaseWnd.h
    UIItemPurchaseWnd.cpp
    UIItemSellWnd.h
    UIItemSellWnd.cpp
    UIShopCommon.h
    UIMinimapWnd.h
    UIMinimapWnd.cpp
    UIEquipWnd.h
    UIEquipWnd.cpp
    UISkillDescribeWnd.h
    UISkillDescribeWnd.cpp
    UISkillListWnd.h
    UISkillListWnd.cpp
    UIChooseWnd.h
    UIChooseWnd.cpp
    UIOptionWnd.h
    UIOptionWnd.cpp
    UIFrameWnd.h
    UIFrameWnd.cpp
    UIWindowMgr.h
    UIWindowMgr.cpp
    UIRechargeGage.h
    UIRechargeGage.cpp
    UIWaitWnd.h
    UIWaitWnd.cpp
    UILoadingWnd.h
    UILoadingWnd.cpp
)

target_include_directories(ro_ui PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/src
)

target_link_libraries(ro_ui PUBLIC
    ro_core
    ro_item
    ro_session
    ro_skill
)

if(RO_ENABLE_QT6_UI)
    target_link_libraries(ro_ui PUBLIC
        Qt6::Core
        Qt6::Gui
    )
endif()
